# raster-based-graphics-pipeline

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
examples/1/: stage3.txt  test0  test1  test2  test3
include/: camera.hpp  canvas.hpp  color.hpp  frame_buffer.hpp  geometry.hpp  projector.hpp  rasterizer.hpp  shapes.hpp  view-generator.hpp
src/: camera.cpp  canvas.cpp  color.cpp  frame_buffer.cpp  geometry.cpp  main.cpp  projector.cpp  shapes.cpp  view-generator.cpp
test/: CMakeLists.txt  canvas-test.cpp  shape-test.cpp
test/src/: camera-test.cpp  geometry-test.cpp  rasterizor-test.cpp
